kubernetes/redis/deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      terminationGracePeriodSeconds: 30
      hostname: redis
      containers:
      - image: redis/redis-stack:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "0.5G"
            cpu: "200m"
          limits:
            memory: "0.5G"
            cpu: "200m"
        name: redis
        volumeMounts:
          - name: redis-data
            mountPath: "/data"
          - name: redis-conf
            mountPath: "/redis-stack.conf"
            subPath: "redis-stack.conf"
        ports:
        - containerPort: 6379
          protocol: TCP
        - containerPort: 8001
          protocol: TCP
      volumes:
        - name: redis-data
          hostPath:
            path: "/run/desktop/mnt/host/c/My Databases/Redis"
            type: DirectoryOrCreate
        - name: redis-conf
          configMap:
            name: redis-deployment-conf
      serviceAccountName: "redis-account"
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: redis
spec:
  selector:
    app: redis
  ports:
  - name: redis
    protocol: TCP
    port: 6379
    targetPort: 6379
  - name: redis-insight
    protocol: TCP
    port: 8001
    targetPort: 8001
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-ingress
  namespace: redis
  # annotations:
  #   nginx.ingress.kubernetes.io/enable-modsecurity: "false"
  #   nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
  #   nginx.ingress.kubernetes.io/modsecurity-transaction-id: "$request_id"
  #   nginx.ingress.kubernetes.io/modsecurity-snippet: |
  #     SecRuleEngine On
spec:
  tls:
    - hosts:
        - "*.parel25.nl"
      secretName: wildcard
  rules:
    - host: redis.parel25.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-service
                port:
                  number: 8001
  ingressClassName: nginx
